[New] Better cache management in TX
- Added items to cache when modified
- added streaming of cached elements